--- a/.kubernetes/frontend-secret.yaml
+++ b/.kubernetes/frontend-secret.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: frontend-secret
+  namespace: nginx-controller
 type: Opaque
 data: 
   REACT_APP_API_KEY: QUl6YVN5QVdOMGU2VUtVZjI2ZEtTb3hyTlY5TFhSYS1VUHIySG40
