--- a/.kubernetes/frontend-tcp-service.yaml
+++ b/.kubernetes/frontend-tcp-service.yaml
@@ -9,6 +9,7 @@ metadata:
   labels:
     io.kompose.service: frontend-tcp
   name: frontend-tcp
+  namespace: ingress-nginx
 spec:
   ports:
     - name: "3000"
