--- a/.kubernetes/raffleshopping-ingress.yaml
+++ b/.kubernetes/raffleshopping-ingress.yaml
@@ -9,10 +9,14 @@ metadata:
     nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/use-regex: 'true'
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
+  namespace: ingress-nginx
 spec:
+  ingressClassName: nginx
   rules:
-  - host: raffleshopping.com
-    http:
+  - http:
       paths:
       - path: /api/catalogs
         pathType: Prefix
@@ -35,10 +39,10 @@ spec:
             name: raffleshopping-services-raffleevents-api-tcp
             port:
               number: 80
-      - path: /
+      - path: /(.*)
         pathType: Prefix
         backend:
           service:
-            name: frontend
+            name: frontend-tcp
             port:
               number: 3000
